Fix pasting selection into a new image missing colorspace

`KisClipboard::clipFromMimeData()` was ignoring any layer information
present in the clipboard and just getting the QImage instead,
which does not contain the color space info.

BUG:515274


(cherry picked from commit ba02429ddae3ce40d71c1ae0c7caa354b49e0de4)

90b7ff8a Fix pasting selection into a new image missing colorspace
5ca28bbe Implement colorspace selection for clipFromKritaLayers
030490a6 Fix a safeAssert in clipFromKritaLayers when copying a mask

Co-authored-by: Luna Lovecraft <ciubix8514@gmail.com>